# firecat2d

./: .gitignore  .neocmake.toml  CMakeLists.txt  CMakePresets.json  REUSE.toml
.github/workflows/: emscripten.yml  linux.yml  macos.yml  reuse.yaml  windows.yml
cmake/: findLibDataChannel.cmake  findLibuv.cmake  findSDL.cmake  findSkia.cmake  finduWebsockets.cmake  shaders.cmake
cmake/toolchains/: xwin-clang-cl.cmake
examples/: CMakeLists.txt
examples/flappy_bird/: CMakeLists.txt  flappyBird.cpp
examples/flappy_bird/src/: game.cpp  game.h
examples/grid_demo/: CMakeLists.txt  main.cpp
examples/shapes/: CMakeLists.txt  main.cpp
examples/spritebenchmark/: CMakeLists.txt  main.cpp
include/fc/client/: app.h  resources.h
include/fc/client/render/: batcher.h  renderer.h  texture.h  typeFace.h
include/fc/client/render/gl/: glBatcher.h  glRenderer.h  glTexture.h
include/fc/client/render/sg/: sgBatcher.h  sgRenderer.h  sgTexture.h
include/fc/client/scene/: container.h  sprite.h  text.h
include/fc/core/: bitStream.h  formatter.h
include/fc/core/math/: gmath.h  matrix.h  vec2.h
src/client/: CMakeLists.txt  app.cpp  inputManager.cpp  resources.cpp
src/client/render/: batcher.cpp  renderer.cpp  texture.cpp  typeFace.cpp
src/client/render/gl/: glBatcher.cpp  glRenderer.cpp  glTexture.cpp  shader.cpp
src/client/render/sg/: sgBatcher.cpp  sgRenderer.cpp  sgTexture.cpp
src/client/render/shaders/: sprite.frag  sprite.frag.spv.h  sprite.vert  sprite.vert.spv.h
src/client/scene/: container.cpp  sprite.cpp  text.cpp
src/core/: CMakeLists.txt  formatter.cpp
src/core/collision/: shape.cpp
tests/: CMakeLists.txt  shapes.test.cpp
